tests/ui/foreign/stashed-issue-121451.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `libc`
  --> $DIR/stashed-issue-121451.rs:1:23
   |
LL | extern "C" fn _f() -> libc::uintptr_t {}
   |                       ^^^^ use of undeclared crate or module `libc`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
